syntax = "proto3";

package api;

service mail {
    rpc send(sendMailReq) returns (sendMailRes) {}
}

message sendMailReq {
    string accountid = 1;
    MailBody body = 2;
    int32 Record = 3;   // test record
}

message sendMailRes {
    int32 errcode = 1;
    int32 Record = 2;
}

message MailBody {
    string title = 1;
    string txt = 2;
}